fix: form size on mobile viewports.

--- a/src/pages/Login.module.css
+++ b/src/pages/Login.module.css
@@ -41,7 +41,7 @@ h1 {
     margin: 2rem auto;
   }
   @media (max-width: 480px) {
-    width: 30rem;
+    width: 25rem;
     margin: 2rem auto;
   }
 }
